fixed the schedule

--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
             <tr>
                 <td>11:30-12:15 PM</td>
                 <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/487/understanding-agility-through-natural-selection" target="_blank">Understanding Agility through “Natural Selection”</a>
-                    <br><a class="speaker-name" href="http://confengine.com/user/nadeem-ulla-khan" target="_blank">Nadeem Ulla Khan</a>
-                </td>
-                <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/493/skype-goes-agile-dont-repeat-our-mistakes" target="_blank">Skype goes agile: don't repeat our mistakes</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/alexey-ilyichev" target="_blank">Alexey Ilyichev</a>
+                </td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/487/understanding-agility-through-natural-selection" target="_blank">Understanding Agility through “Natural Selection”</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/nadeem-ulla-khan" target="_blank">Nadeem Ulla Khan</a>
                 </td>
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/695/the-power-of-retrospection" target="_blank">The Power of Retrospection...</a>
@@ -331,6 +331,12 @@
                 <td colspan="3">
                     <b>Predictability and Productivity - Does Agile Help?</b>
                     <br/>Panel with experts from Local Pune Industry and Invited Speakers
+                </td>
+            </tr>
+            <tr>
+                <td>07:30-10:00 PM</td>
+                <td colspan="3">
+                    <b>Dinner and Networking</b>
                 </td>
             </tr>
 
@@ -487,7 +493,7 @@
                     <td>100</td>
                     <td>7,000 Rs.</td>
                 </tr>
-                <tr>
+                <tr style="text-decoration: line-through">
                     <td>4. Regular</td>
                     <td>Nov 1st</td>
                     <td>50</td>
@@ -496,8 +502,8 @@
                 <tr>
                     <td>5. Late</td>
                     <td>Nov 15th</td>
-                    <td>50</td>
-                    <td>12,000 Rs.</td>
+                    <td>25</td>
+                    <td>8,000 Rs.</td>
                 </tr>
                 <tr>
                     <td>6. Last Minute</td>
