--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                     <br><a class="speaker-name" href="http://confengine.com/user/alexey-ilyichev" target="_blank">Alexey Ilyichev</a>
                 </td>
                 <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/487/understanding-agility-through-natural-selection" target="_blank">Understanding Agility through “Natural Selection”</a>
-                    <br><a class="speaker-name" href="http://confengine.com/user/nadeem-ulla-khan" target="_blank">Nadeem Ulla Khan</a>
+                    <a href="http://www.industriallogic.com/blog/sufficient-design/" target="_blank">Sufficient Design</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/joshua-kerievsky" target="_blank">Joshua Kerievsky</a>
                 </td>
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/695/the-power-of-retrospection" target="_blank">The Power of Retrospection...</a>
@@ -329,8 +329,8 @@
             <tr>
                 <td>05:45-07:00 PM</td>
                 <td colspan="3">
-                    <b>Predictability and Productivity - Does Agile Help?</b>
-                    <br/>Panel with experts from Local Pune Industry and Invited Speakers
+                    <b>Panel: Predictability and Productivity - Does Agile Help?</b>
+                    <br/>Linda Rising, Joshua Kerievsky, Julian Harty and <a href="https://in.linkedin.com/in/gmehra" target="_blank">Gaurav Mehra</a>
                 </td>
             </tr>
             <tr>
